--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,43 @@
 .calculator {
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  input[type="text"],
-  button {
-    margin: 5px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  button {
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  p {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #282c34;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  color: #fff;
+}
+
+input[type="text"] {
+  width: calc(50% - 10px);
+  margin: 5px;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3e4451;
+  color: #fff;
+  font-size: 16px;
+}
+
+button {
+  margin: 5px;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #958426;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #9dc351;
+}
+
+p {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
